# interm_proyect_robotics

./: CMakeLists.txt  README.md  package.xml
launch/: inter_robots.launch  inter_world.launch  interm_main.launch  interm_one_phantom.launch  nut.launch  phantom.launch  phatom_rviz.launch  screw.launch
matlab_scripts/: GUI.mlapp  GUI1.mlapp  Vision.mlx  basura.m  check_position_nut.m  check_position_screw.m  cinInv.asv  cinInv.m  get_point_place.m  get_point_place_nut.m  get_point_place_screw.m  invPhantom.m  main_interm.asv  main_interm.m  modExampleHelperGazeboModel.m  move.m  move1.m  mover_phantom_1.m  mover_phantom_2.m  mover_phantom_nut.m  mover_phantom_screw.m  picknplace.asv  picknplace.m  vision.m  wait_pos.m
matlab_scripts/movimiento robot/: aplicacion_man.m  picknplace.m  wait_pos.m
matlab_scripts/trayectorias/: .MATLABDriveTag  cinInv.m  get_st.m
models/interm_world/: model.config  model.sdf
models/interm_world/materials/scripts/: interm_texture.material
models/nut/: model.config  model.sdf
models/nut/materials/scripts/: nut_texture.material
models/nut/meshes/: nut.dae
models/pincher/: GripperBody_v4.stl  LeftFinger_v2.stl  PincherBase_v8.stl  ShoulderServo_v5.stl  UpperArm_v2.stl
models/scre/: screw.dae
models/screw/: model.config  model.sdf
models/screw/materials/scripts/: screw_texture.material
models/screw/meshes/: screw.dae
urdf/: phantom_description_gazebo.xacro  phatomx_description.xacro
vision_maquina/: Vision.mlx
wiki/ros-press-kit/: ros_logo_guidelines.eps
worlds/: intermidiate.world
