<?xml version="1.0"?>
<package format="2">
  <name>interm_proyect_robotics</name>
  <version>0.0.0</version>
  <description>The interm_proyect_robotics package</description>


  <maintainer email="juansantacoloma@todo.todo">juansantacoloma</maintainer>
  <maintainer email="msucerquiao@unal.edu.co">manuelasucerquia</maintainer>


  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path ="${prefix}/models"/>
    <gazebo_ros gazebo_media_path ="${prefix}/worlds"/>
  </export>
</package>
